Fixed spacing in the service cards.

--- a/src/components/Service Card/ServiceCard.css
+++ b/src/components/Service Card/ServiceCard.css
@@ -18,6 +18,7 @@
 
 #service {
     /* CSS Box */
+    margin-bottom: 10px;
 
     /* Text */
     font-size: 18px;
